--- a/form.html
+++ b/form.html
@@ -20,8 +20,12 @@
                 <label for="tel">tel:</label>
                 <input type="number" name="tel" id="tel">
                 <label for="gender">gender:</label>
-                <input type="checkbox" name="male" id="male"> male
-                <input type="checkbox" name="female" id="female"> female
+                <select>
+                    <option></option>
+                    <option>male</option>
+                    <option>female</option>
+                </select>
+                <input type="button" value="submit">
             </fieldset>
         </form>
     </body>
